# rdbi

./: .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  release-please-config.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
examples/: example-schema.sql  rdbi-codegen-example.toml
examples/build_rs_usage/: Cargo.toml  build.rs  schema.sql
examples/build_rs_usage/src/: main.rs
rdbi/: CHANGELOG.md  Cargo.toml
rdbi-codegen/: CHANGELOG.md  Cargo.toml
rdbi-codegen/src/: error.rs  lib.rs  main.rs
rdbi-codegen/src/codegen/: code_generator.rs  dao_generator.rs  mod.rs  naming.rs  struct_generator.rs  type_resolver.rs
rdbi-codegen/src/config/: defaults.rs  mod.rs  settings.rs
rdbi-codegen/src/parser/: metadata.rs  mod.rs  schema_parser.rs
rdbi-derive/: CHANGELOG.md  Cargo.toml  LICENSE
rdbi-derive/src/: from_row.rs  lib.rs  to_params.rs
rdbi-tests/: Cargo.toml  build.rs
rdbi-tests/src/: lib.rs
rdbi-tests/tests/: integration_test.rs
rdbi/src/: batch.rs  error.rs  lib.rs  macros.rs  query.rs  value.rs
rdbi/src/mysql/: mod.rs  pool.rs  row.rs  transaction.rs  types.rs
rdbi/src/traits/: from_row.rs  from_value.rs  mod.rs  pool.rs  to_params.rs  to_value.rs  transaction.rs
