[package]
name = "rdbi-derive"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["rdbi", "derive", "macro", "database"]
categories.workspace = true
description = "Derive macros for rdbi database abstraction layer"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
