[package]
name = "rdbi-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[build-dependencies]
rdbi-codegen = { path = "../rdbi-codegen" }

[dev-dependencies]
rdbi = { path = "../rdbi" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
testcontainers = { version = "0.26", features = ["watchdog"] }
testcontainers-modules = { version = "0.14", features = ["mysql", "watchdog"] }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
ctor = "0.2"
serial_test = "3.0"
shutdown_hooks = "0.1"
