[package]
name = "rdbi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database abstraction layer built on mysql_async with derive macros"

[dependencies]
rdbi-derive.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true
mysql_async = "0.36"
futures = "0.3"
rust_decimal = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
