[package]
name = "build-rs-example"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace
[workspace]

[package.metadata.rdbi-codegen]
schema_file = "schema.sql"
# include_tables = ["users", "orders"]  # Optional: only generate for specific tables
# exclude_tables = ["migrations"]       # Optional: exclude specific tables
# output_structs_dir = "./src/generated/models"  # Optional: custom output path
# output_dao_dir = "./src/generated/dao"         # Optional: custom output path
# models_module = "models"              # Optional: module name for structs
# dao_module = "dao"                    # Optional: module name for DAOs
# generate_structs = true               # Optional: set to false to skip struct generation
# generate_dao = true                   # Optional: set to false to skip DAO generation

[build-dependencies]
rdbi-codegen = { path = "../../rdbi-codegen" }

[dependencies]
rdbi = { path = "../../rdbi" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
