[package]
name = "build-rs-example"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace
[workspace]

[package.metadata.rdbi-codegen]
schema_file = "schema.sql"
output_structs_dir = "src/generated/models"
output_dao_dir = "src/generated/dao"
# include_tables = ["users", "orders"]
# exclude_tables = ["migrations"]
# generate_structs = true
# generate_dao = true

[build-dependencies]
rdbi-codegen = { path = "../../rdbi-codegen" }

[dependencies]
rdbi = { path = "../../rdbi" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
